--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,18 @@ version = "0.1.0"
 description = "OCR for latex images"
 authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
 readme = "README.md"
+license = "GPL-3.0-or-later"
+repository = "https://github.com/VikParuchuri/texify"
+keywords = ["ocr", "latex", "markdown", "pdf"]
+include = [
+    "ocr_app.py",
+    "ocr_image.py",
+    "run_ocr_app.py",
+    "benchmark.py"
+]
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.10,<4.0"
 streamlit = "^1.29.0"
 transformers = "^4.36.2"
 torch = "^2.1.2"
@@ -18,9 +27,17 @@ pypdfium2 = "^4.25.0"
 python-dotenv = "^1.0.0"
 watchdog = "^3.0.0"
 streamlit-drawable-canvas = {git = "https://github.com/VikParuchuri/streamlit-drawable-canvas.git", rev = "develop"}
+ftfy = "^6.1.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
+evaluate = "^0.4.1"
+rapidfuzz = "^3.5.2"
+
+[tool.poetry.scripts]
+texify = "ocr_image:main"
+texify_gui = "run_ocr_app:run_app"
+texify_benchmark = "benchmark:main"
 
 [build-system]
 requires = ["poetry-core"]
