--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python-dotenv = "^1.0.0"
 watchdog = "^3.0.0"
 streamlit-drawable-canvas = {git = "https://github.com/VikParuchuri/streamlit-drawable-canvas.git", rev = "develop"}
 ftfy = "^6.1.3"
+tabulate = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
