--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ tabulate = "^0.9.0"
 jupyter = "^1.0.0"
 evaluate = "^0.4.1"
 rapidfuzz = "^3.5.2"
+pyperclip = "^1.8.2"
 
 [tool.poetry.scripts]
 texify = "ocr_image:main"
