--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "texify"
-version = "0.1.6"
+version = "0.1.7"
 description = "OCR for latex images"
 authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
 readme = "README.md"
@@ -15,7 +15,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
+python = ">=3.9,<4.0,!=3.9.7"
 streamlit = "^1.29.0"
 transformers = "^4.36.2"
 torch = "^2.1.2"
@@ -29,6 +29,7 @@ watchdog = "^3.0.0"
 ftfy = "^6.1.3"
 tabulate = "^0.9.0"
 streamlit-drawable-canvas-jsretry = "^0.9.3"
+huggingface-hub = "0.19.4"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
