--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "texify"
-version = "0.1.10"
+version = "0.2.0"
 description = "OCR for latex images"
 authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
 readme = "README.md"
@@ -15,13 +15,12 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<4.0,!=3.9.7"
+python = "^3.10"
 transformers = "^4.36.2"
 torch = "^2.1.2"
 pydantic = "^2.5.2"
 pydantic-settings = "^2.1.0"
 Pillow = "^10.1.0"
-numpy = "^1.26.2"
 pypdfium2 = "^4.25.0"
 python-dotenv = "^1.0.0"
 ftfy = "^6.1.3"
